discussion/kv_engine/129817/129817_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39436: Track per-collection disk_size with Magma

Update the tracked collection size on disk when backed by Magma. This
was already done under couchstore.

Change-Id: Id3513d105045c272f25c0c34ec2ab4e2f04906fd

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-06-23 15:36:27.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: James H
Date: 2020-06-24 09:32:57.000000000
Message: 
Removed Code-Review-2 by James Harrison <james.harrison@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-25 05:43:15.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24812/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/durability_timeout_task.h:58:24:
error: template argument for template type parameter must be a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24812/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28788/ : FAILURE

Compile error at ..\couchstore\src\dbdump.cc(234): error C2039: "decode": is not a member of "cb::mcbp::unsigned_leb128<uint32_t,void>" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28788/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2987/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1189:36: error: no viable conversion from "(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1045:24)" to "magma::Magma::WriteDocsCallback" (aka "function<void (const magma::Magma::WriteOperation &, const bool, const bool)>") [clang-diagnostic-error]
                                   writeDocsCB,
                                   ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/bits/std_function.h:421:7: note: candidate constructor not viable: no known conversion from "(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1045:24)" to "std::nullptr_t" (aka "nullptr_t") for 1st argument
      function(nullptr_t) noexcept
      ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/bits/std_function.h:432:7: note: candidate constructor not viable: no known conversion from "(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1045:24)" to "const std::function<void (const magma::Magma::WriteOperation &, bool, bool)> &" for 1st argument
      function(const function& __x);
      ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/bits/std_function.h:441:7: note: candidate constructor not viable: no known conversion from "(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1045:24)" to "std::function<void (const magma::Magma::WriteOperation &, bool, bool)> &&" for 1st argument
      function(function&& __x) noexcept : _Function_base()
      ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/bits/std_function.h:465:2: note: candidate template ignored: substitution failure [with _Functor = (lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1045:24), $1 = void]: no type named "type" in "std::result_of<(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1045:24) &(const magma::Magma::WriteOperation &, bool, bool)>"
        function(_Functor);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/magma/include/libmagma/magma.h:724:46: note: passing argument to parameter "docCallback" here
                     const WriteDocsCallback docCallback = nullptr,
                                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2987/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1189:36:
error: no viable conversion from "(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1045:24)" to "magma::Magma::WriteDocsCallback" (aka "function<void (const magma::Magma::WriteOperation &, const bool, const bool)>") [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2987/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4342/ : FAILURE

Compile error at [2020-06-24T16:56:53.591Z] ../couchstore/src/dbdump.cc:234:61:
error: ?decode? is not a member of ?cb::mcbp::unsigned_leb128<unsigned int>?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4342/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4407/ : FAILURE

Compile error at [2020-06-24T16:56:20.258Z] ../couchstore/src/dbdump.cc:234:61:
error: ?decode? is not a member of ?cb::mcbp::unsigned_leb128<unsigned int>?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4407/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4485/ : FAILURE

Compile error at [2020-06-24T16:57:22.106Z] ../couchstore/src/dbdump.cc:234:61:
error: ?decode? is not a member of ?cb::mcbp::unsigned_leb128<unsigned int>?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4485/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12224/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3450/ : FAILURE

Compile error at [2020-06-24T16:10:32.936Z] ../couchstore/src/dbdump.cc:234:61:
error: no member named "decode" in "cb::mcbp::unsigned_leb128<unsigned int, void>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3450/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1493/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
